--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,4 +32,16 @@
 
   </div>
 
+  <script>
+      const prefersDarkColorScheme = () =>
+        window &&
+        window.matchMedia &&
+        window.matchMedia('(prefers-color-scheme: dark)').matches;
+      // alert('prefersDarkColorScheme = ' + prefersDarkColorScheme());
+      if (prefersDarkColorScheme()) {
+        DarkReader.setFetchMethod(window.fetch)
+        DarkReader.enable()
+      }
+  </script>
+
 </footer>
