--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,6 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
-  <script src="/assets/js/darkreader-4.9.83.js"></script>
+  <!-- <script src="/assets/js/darkreader-4.9.83.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/darkreader@4.9.84/darkreader.min.js"></script>
 </head>
