--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,28 +3,17 @@
 
   <div class="wrapper">
 
-    <!-- <h2 class="footer-heading">{{ site.title | escape }}</h2> -->
-
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <!-- <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
-            </li> -->
             {%- if site.email -%}
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {%- endif -%}
         </ul>
       </div>
-
       <div class="footer-col footer-col-2">
         {%- include social.html -%}
       </div>
-
       <div class="footer-col footer-col-3">
         <p>{{- site.description | escape -}}</p>
       </div>
@@ -33,15 +22,19 @@
   </div>
 
   <script>
-      const prefersDarkColorScheme = () =>
-        window &&
-        window.matchMedia &&
-        window.matchMedia('(prefers-color-scheme: dark)').matches;
-      // alert('prefersDarkColorScheme = ' + prefersDarkColorScheme());
-      if (prefersDarkColorScheme()) {
-        DarkReader.setFetchMethod(window.fetch)
-        DarkReader.enable()
-      }
-  </script>
 
+    const iconDark = document.getElementById('icon-dark');
+    const iconLight = document.getElementById('icon-light');
+    const darkModeButton = document.getElementsByClassName('dark-mode-button')[0]
+    const darkModePreferred = (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches)
+
+    window.onload = function() {
+      checkDarkMode()
+    }
+
+    darkModeButton.onclick = function() {
+      toggleDarkMode()
+    }
+
+  </script>
 </footer>
