--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,19 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" style="color: #777777;" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" style="color: #666666;" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
     <span style="padding-left: 25px; color: #666666;"">
       [ <a href="https://github.com/scott-es" target="_blank" style="color: #0070E0">github</a> ||
       <a href="mailto: scott@scottesbrandt.com" style="color: #0070E0">email</a> ]
+    </span>
+
+    <span>
+      <a class="dark-mode-button"  style="padding-left: 25px; text-decoration: none; cursor: pointer;">
+        <i id="icon-dark" class="fa fa-moon" style="color: grey;"></i>
+        <i id="icon-light" class="fa fa-sun" style="color: grey;"></i>
+        <span id="dark-text"></span>
+      </a>
     </span>
 
     {%- if page_paths -%}
@@ -29,6 +37,7 @@
             {%- endif -%}
           {%- endfor -%}
         </div>
+
       </nav>
     {%- endif -%}
   </div>
