--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,13 +10,13 @@
       <a href="mailto: scott@scottesbrandt.com" style="color: #0070E0">email</a> ]
     </span>
 
-    <span>
+    <!-- <span>
       <a class="dark-mode-button"  style="padding-left: 25px; text-decoration: none; cursor: pointer;">
         <i id="icon-dark" class="fa fa-moon" style="color: grey;"></i>
         <i id="icon-light" class="fa fa-sun" style="color: grey;"></i>
         <span id="dark-text"></span>
       </a>
-    </span>
+    </span> -->
 
     {%- if page_paths -%}
       <nav class="site-nav">
@@ -30,6 +30,13 @@
         </label>
 
         <div class="trigger">
+          <span class="page-link">
+            <a class="dark-mode-button"  style="padding-left: 25px; text-decoration: none; cursor: pointer;">
+              <i id="icon-dark" class="fa fa-moon" style="color: grey;"></i>
+              <i id="icon-light" class="fa fa-sun" style="color: grey;"></i>
+              <span id="dark-text"></span>
+            </a>
+          </span>
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
