--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header" role="banner" style="background-color: #d5f5d5; padding-top: 5px;">
+<header class="site-header" role="banner" style="background-color: #a7d8df; padding-top: 5px;">
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
@@ -9,14 +9,6 @@
       [ <a href="https://github.com/scott-es" target="_blank" style="color: #0070E0">github</a> ||
       <a href="mailto: scott@scottesbrandt.com" style="color: #0070E0">email</a> ]
     </span>
-
-    <!-- <span>
-      <a class="dark-mode-button"  style="padding-left: 25px; text-decoration: none; cursor: pointer;">
-        <i id="icon-dark" class="fa fa-moon" style="color: grey;"></i>
-        <i id="icon-light" class="fa fa-sun" style="color: grey;"></i>
-        <span id="dark-text"></span>
-      </a>
-    </span> -->
 
     {%- if page_paths -%}
       <nav class="site-nav">
